--- a/css/git.css
+++ b/css/git.css
@@ -139,6 +139,20 @@ header a:hover {
     line-height: 1.4;
 }
 
+.lista-prueba-final {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.lista-prueba-final li {
+    padding-left: 5px;
+}
+
+.lista-prueba-final li::marker {
+  font-weight: bold;
+}
+
 .iteracion {
     background-color: #fdfaf1;
     border-radius: 0 20px 20px 0;
